Fix low-contrast hover colour of alert actions (light theme only) (#36484)

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -10439,7 +10439,7 @@ noscript {
   &:hover,
   &:focus,
   &:active {
-    background: color.change($ui-base-color, $alpha: 0.85);
+    background: color.change($white, $alpha: 0.15);
   }
 }
 
